--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body>
     <div id="app"></div>
   </body>
-
+<!-- проверка коммита -->
   <script type="module" src="./index.js"></script>
 </html>
