--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <div id="app"></div>
   </body>
 <!-- проверка коммита -->
+<!-- проверка коммита -->
+<!-- проверка коммита -->
   <script type="module" src="./index.js"></script>
 </html>
